# espcontrol-d1001

./: .gitignore  AGENTS.md  DESLOPPIFY.md  README.md  package-lock.json  package.json  tsconfig.json
.github/: esphome.env
.github/workflows/: build-d1001.yml  ci.yml  firmware-compile.yml  hil-smoke.yml  nightly-firmware.yml  pages.yml  release-d1001.yml  release.yml  runner-cleanup.yml  sync-upstream.yml
builds/: esp32-p4-86.factory.yaml  esp32-p4-86.yaml  guition-esp32-p4-jc1060p470.factory.yaml  guition-esp32-p4-jc1060p470.yaml  guition-esp32-p4-jc4880p443.factory.yaml  guition-esp32-p4-jc4880p443.yaml  guition-esp32-p4-jc8012p4a1-v2.factory.yaml  guition-esp32-p4-jc8012p4a1-v2.yaml  guition-esp32-p4-jc8012p4a1.factory.yaml  guition-esp32-p4-jc8012p4a1.yaml  guition-esp32-s3-4848s040.factory.yaml  guition-esp32-s3-4848s040.yaml  seeed-esp32-p4-reterminal-d1001.factory.yaml  seeed-esp32-p4-reterminal-d1001.yaml
common/addon/: backlight.yaml  backlight_schedule.yaml  connectivity.yaml  connectivity_deployed.yaml  connectivity_ethernet.yaml  firmware_update.yaml  firmware_update_disabled.yaml  time.yaml  web_server_auth.yaml
common/assets/: README.md  icon_glyphs.yaml  icons.json  network_status_glyphs.yaml
common/config/: baseline_card_normalization_fixtures.json  button_order.yaml  card_contract.json  card_runtime_baseline_card_normalization_fixtures.json  card_runtime_inventory.json  climate_card_normalization_fixtures.json  colors.yaml  confirmation_card_normalization_fixtures.json  cover_card_normalization_fixtures.json  display.yaml  entity_names.json  entity_names.yaml  media_card_normalization_fixtures.json  modal_layout_geometry_fixtures.json  parser_runtime_card_normalization_fixtures.json  sensor_card_normalization_fixtures.json  strings.cs.txt  strings.da.txt  strings.de.txt  strings.en.txt  strings.es.txt  strings.fi.txt  strings.fr.txt  strings.hu.txt  strings.it.txt  strings.nb.txt  strings.nl.txt  strings.pl.txt  strings.pt-br.txt  strings.pt.txt  strings.ro.txt  strings.sk.txt  strings.sl.txt  strings.sv.txt  strings.tr.txt  strings.uk.txt  subpage_card_normalization_fixtures.json  theme.yaml  vacuum_mower_card_normalization_fixtures.json
common/device/: button_widget.yaml  core_infra.yaml  esp32_c6_firmware_update.yaml  esp32_c6_firmware_update_disabled.yaml  image_cards.yaml  image_cards_1.yaml  image_cards_6.yaml  screen_button_setup.yaml  screen_clock.yaml  screen_cover_art.yaml  screen_ethernet_setup.yaml  screen_ha_actions.yaml  screen_ha_setup.yaml  screen_loading.yaml  screen_loading_ethernet.yaml  screen_wifi_setup.yaml
compatibility/fixtures/: card_runtime_surface_baseline.json  product_compatibility.json  web_migration_baseline.json
components/artwork_image/: __init__.py  artwork_image.cpp  artwork_image.h  bmp_image.cpp  bmp_image.h  bmp_stream.h  image_decoder.cpp  image_decoder.h  image_pipeline_policy.h  image_service.cpp  image_service.h  jpeg_image.cpp  jpeg_image.h  p4_jpeg_backend.cpp  p4_jpeg_backend.h  p4_scaling.h
components/espcontrol/: __init__.py  artwork_controller.h  backlight.h  button_grid.h  button_grid_access_cards.h  button_grid_access_cover_driver.h  button_grid_actions.h  button_grid_alarm.h  button_grid_alarm_driver.h  button_grid_basic_action_driver.h  button_grid_card_registry.h  button_grid_card_runtime.h  button_grid_cards.h  button_grid_cleaning_driver.h  button_grid_climate.h  button_grid_climate_control_driver.h  button_grid_config.h  button_grid_config_parser.h  button_grid_confirm.h  button_grid_contract_generated.h  button_grid_cover_modal_driver.h  button_grid_date_time_driver.h  button_grid_datetime_cards.h  button_grid_display.h  button_grid_fan.h  button_grid_fan_control_driver.h  button_grid_grid.h  button_grid_ha.h  button_grid_image.h  button_grid_image_driver.h  button_grid_layout.h  button_grid_legacy_compatibility_driver.h  button_grid_light_control_driver.h  button_grid_limits.h  button_grid_local_controls.h  button_grid_media.h  button_grid_media_config.h  (+48 more)
dev-docs/: README.md  architecture.md  card-contract.md  card-type-map.md  change-workflows.md  check-matrix.md  checks-and-releases.md  compatibility-contract.md  cover-art-mode.md  devices-and-builds.md  display-lifecycle.md  failure-cookbook.md  firmware-module-baseline.md  firmware.md  modal-layout-system.md  p4-86-audio-stack-test.md  saved-config-normalization-baseline.md  source-of-truth.md  syncing-upstream.md  task-router.md  web-configurator.md
devices/: catalog.json  manifest.json
docs/: d1001-audio-battery.md  index.md
hil/: .env.example  .gitignore  README.md  docker-compose.yml
product/: README.md  product_snapshot.json
scripts/: build.py  build_web_bundle.js  camera_test_endpoint.py  check_backup_contract.js  check_card_contract_outputs.py  check_config_formats.js  check_cover_art_contract.py  check_dev_docs.py  check_device_api.js  check_device_manifest.py  check_device_matrix.py  check_device_profiles.py  check_firmware_card_runtime.py  check_firmware_display_tokens.py  check_firmware_ha_bindings.py  check_firmware_modal_layouts.py  check_firmware_modals.py  check_firmware_parser.py  check_firmware_release.py  check_icon_groups.py  check_local_artifacts.py  check_model_contract.js  check_pr_process.py  check_preview_features.js  check_product_schema.py  check_product_snapshot.py  check_public_firmware.py  check_release_changelog.py  check_release_confidence.py  check_saved_config_parity.js  check_saved_config_production.js  check_saved_config_shadow.js  check_state_contract.js  check_tasks.py  check_tasks_data.py  check_timezones.py  check_web_browser_smoke.js  check_web_migration_baseline.js  check_web_smoke.js  device_matrix.py  (+21 more)
tests/: migration-ledger.md
tests/firmware/: CMakeLists.txt  artwork_controller_test.cpp  bmp_stream_test.cpp  button_grid_foundations_test.cpp  climate_target_logic_test.cpp  display_mode_controller_test.cpp  foundation_test.cpp  ha_read_coordinator_test.cpp  image_pipeline_policy_test.cpp  image_service_test.cpp  p4_scaling_test.cpp
tests/firmware/stubs/esphome/core/: string_ref.h
(+365 files in other folders)
